--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,7 @@
     }
   }
   #home {
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
